--- a/_posts/2015-07-05-e588a9e794a8openvpne8bf9ce7a88be8bf9ee59b9ee5aeb6e9878ce8b7afe794b1e599a8e4b88ae58685e5a496e7bd91e38082e38082e38082.md
+++ b/_posts/2015-07-05-e588a9e794a8openvpne8bf9ce7a88be8bf9ee59b9ee5aeb6e9878ce8b7afe794b1e599a8e4b88ae58685e5a496e7bd91e38082e38082e38082.md
@@ -4,10 +4,12 @@ title: 利用openvpn远程连回家里openwrt路由器上内/外网。。。
 date: 2015-07-05 19:03:31+00:00
 author: coffeecat
 layout: post
-categories: &id001
+categories:
 - openwrt
 - 科学上网
-tags: *id001
+tags:
+- openwrt
+- 科学上网
 ---
 最近考虑搞个双线或者精品网，但有时出门在外，无法享受，岂不浪费。于是考虑通过openvpn连回家里路由器来上网，还能访问家里的设备。。。家里的刚升了上行带宽，正好来试试。
 
