--- a/_posts/2016-02-24-openvpne5aea2e688b7e69cbae697a0e6b395e8aebfe997aee999a4e7bd91e585b3e8b7afe794b1e5a496e79a84e5ad90e7bd91e8aebee5a487e79a84e8a7a3e586b3.md
+++ b/_posts/2016-02-24-openvpne5aea2e688b7e69cbae697a0e6b395e8aebfe997aee999a4e7bd91e585b3e8b7afe794b1e5a496e79a84e5ad90e7bd91e8aebee5a487e79a84e8a7a3e586b3.md
@@ -4,8 +4,9 @@ title: Openvpn客户机无法访问除网关路由外的子网设备的解决办
 date: 2016-02-24 21:28:24+00:00
 author: coffeecat
 layout: post
-categories: &id001
+categories:
 - 科学上网
-tags: *id001
+tags:
+- 科学上网
 ---
 如果子网中有Esxi主机的话，需要在虚拟交换机中打开混杂模式（Promiscuous Mode）。。。
