--- a/_posts/2016-07-01-openwrt-e5ae9ee78eb0e68c89ipe8bf9be8a18ce6b581e9878fe7bb9fe8aea1e79a84e58a9ee6b395.md
+++ b/_posts/2016-07-01-openwrt-e5ae9ee78eb0e68c89ipe8bf9be8a18ce6b581e9878fe7bb9fe8aea1e79a84e58a9ee6b395.md
@@ -4,9 +4,10 @@ title: Openwrt 实现按ip进行流量统计的办法
 date: 2016-07-01 18:37:21+00:00
 author: coffeecat
 layout: post
-categories: &id001
+categories:
 - openwrt
-tags: *id001
+tags:
+- openwrt
 ---
 一般的路由都有按IP进行流量统计，但是openwrt似乎没有自带的按ip进行流量统计插件，只有按interface进行统计的插件，不是特别方便。在查阅一些资料后，发现一个软件叫做bandwithd，可以实现这个功能。
 
