--- a/_posts/2016-07-27-openwrt-e8b7afe794b1e599a8e9809ae8bf87e585a8e5b180httpe4bba3e79086e4b88ae7bd91e79a84e680aae5bc82e8a7a3e586b3e696b9e6a188.md
+++ b/_posts/2016-07-27-openwrt-e8b7afe794b1e599a8e9809ae8bf87e585a8e5b180httpe4bba3e79086e4b88ae7bd91e79a84e680aae5bc82e8a7a3e586b3e696b9e6a188.md
@@ -4,9 +4,10 @@ title: Openwrt 路由器通过全局HTTP代理上网的怪异解决方案
 date: 2016-07-27 21:18:13+00:00
 author: coffeecat
 layout: post
-categories: &id001
+categories:
 - openwrt
-tags: *id001
+tags:
+- openwrt
 ---
 由于某些网络要求必须通过http代理认证才能上网，而目前市面上还没找到支持全局wan口代理上网的路由器，只能另辟蹊径。
 
