--- a/_posts/2020-03-04-v2rayE79A84wsE6A8A1E5BC8FE59CA8openwrtE4B88AE79A84E585A8E5B180E5928CE799BDE5908DE58D95E79A84E4BC98E58C96E9858DE7BDAE.md
+++ b/_posts/2020-03-04-v2rayE79A84wsE6A8A1E5BC8FE59CA8openwrtE4B88AE79A84E585A8E5B180E5928CE799BDE5908DE58D95E79A84E4BC98E58C96E9858DE7BDAE.md
@@ -4,10 +4,12 @@ title: v2ray的ws模式在openwrt上的全局和白名单的优化配置
 date: 2020-03-24 14:25:57+00:00
 author: coffeecat
 layout: post
-categories: &id001
+categories:
 - openwrt
 - 科学上网
-tags: *id001
+tags:
+- openwrt
+- 科学上网
 ---
 
 一、简介
