--- a/_posts/2015-03-15-tp-link-wr720n-e7a1ace694b9e58d87e7baa716m-flashe694bbe795a5.md
+++ b/_posts/2015-03-15-tp-link-wr720n-e7a1ace694b9e58d87e7baa716m-flashe694bbe795a5.md
@@ -4,9 +4,10 @@ title: TP-Link wr720n 硬改升级16M flash攻略
 date: 2015-03-15 12:38:25+00:00
 author: coffeecat
 layout: post
-categories: &id001
+categories:
 - openwrt
-tags: *id001
+tags:
+- openwrt
 ---
 之前软改wr720n后，发现u盘有时候会松，导致路由无法从u盘启动，然后看了一些硬改的文章，觉得也不是很难，于是从淘宝拍了一些材料，自己开始硬改。
 
