--- a/_posts/2015-07-17-e5ba9fe789a9e588a9e794a8-openwrt-x86-e588b7e69cbae5ae9ee68898efbc885e4b8aae58d83e58586e7bd91e58fa3efbc8ce4bbbbe6848fe58886e9858dwane5928clan.md
+++ b/_posts/2015-07-17-e5ba9fe789a9e588a9e794a8-openwrt-x86-e588b7e69cbae5ae9ee68898efbc885e4b8aae58d83e58586e7bd91e58fa3efbc8ce4bbbbe6848fe58886e9858dwane5928clan.md
@@ -4,9 +4,10 @@ title: 废物利用 Openwrt X86 刷机实战（5个千兆网口+wifi，任意分
 date: 2015-07-17 22:04:14+00:00
 author: coffeecat
 layout: post
-categories: &id001
+categories:
 - openwrt
-tags: *id001
+tags:
+- openwrt
 ---
 最近使用中发现一般的路由器性能还是不行，例如顶级的wrt1900ac，50M跑满SS使用rc4-md5的负载约为40-50%，若使用aes256cfb负载约为70%。如果家里是100M的带宽跑满SS估计会用到100%，这时候性能就不够了，特别是如果家里有两条宽带的，那性能就更不够用了，此时就必须使用x86架构了。另外废旧的电脑可以利用起来。  
 网上openwrt x86攻略不多，大多数只有寥寥几句，还是自己弄吧。。。
