--- a/_posts/2019-06-09-v2raye59ca8openwrte4b88be79a84e5ae89e8a385e983a8e7bdb2.md
+++ b/_posts/2019-06-09-v2raye59ca8openwrte4b88be79a84e5ae89e8a385e983a8e7bdb2.md
@@ -4,10 +4,12 @@ title: v2ray在openwrt下的安装部署
 date: 2019-06-09 09:44:57+00:00
 author: coffeecat
 layout: post
-categories: &id001
+categories:
 - openwrt
 - 科学上网
-tags: *id001
+tags:
+- openwrt
+- 科学上网
 ---
 从本月开始，ss扶墙的服务器全灭，最夸张的是新建一个灭一个，活不过2小时。不得不寻找新的解决方案，终于，花了几天时间搞定了。那就是迁移到v2ray。
 
