--- a/_posts/2020-03-04-v2rayE79A84wsE6A8A1E5BC8FE59CA8openwrtE4B88AE79A84E585A8E5B180E5928CE799BDE5908DE58D95E79A84E4BC98E58C96E9858DE7BDAE.md
+++ b/_posts/2020-03-04-v2rayE79A84wsE6A8A1E5BC8FE59CA8openwrtE4B88AE79A84E585A8E5B180E5928CE799BDE5908DE58D95E79A84E4BC98E58C96E9858DE7BDAE.md
@@ -54,7 +54,7 @@ tags:
 
 2.chinadns在openwrt的配置参考：
 
-<pre lang="bash" line="0"  colla="+">
+<pre><code class="language-bash">
 config chinadns
 	option chnroute '/etc/chinadns_chnroute.txt'
 	option addr '0.0.0.0'
@@ -62,11 +62,11 @@ config chinadns
 	option port '5454'
 	option server '114.114.114.114,127.0.0.1:5354'
 	option bidirectional '0'
-</pre>
+</code></pre>
 
 3.v2ray在openwrt客户端的配置为：
 
-<pre lang="bash" line="0"  colla="+">
+<pre><code class="language-bash">
 {
     "inbounds": [
       {    
@@ -171,24 +171,24 @@ config chinadns
   
   
   
-</pre>
+</code></pre>
 
 4.新建luci菜单配置v2ray：
 
 (1).新建/etc/config/advancedconfig，内容为：
 
-<pre lang="bash" line="0"  colla="+">
+<pre><code class="language-bash">
 
 config arguments
 
 config rules
 	option v2raymode 'gfwlist'
 
-</pre>
+</code></pre>
 
 (2)新建/usr/lib/lua/luci/controller/advancedconfig.lua，内容为：
 
-<pre lang="bash" line="0"  colla="+">
+<pre><code class="language-bash">
 
 --/usr/lib/lua/luci/controller/advancedconfig.lua
 module("luci.controller.advancedconfig", package.seeall)
@@ -203,11 +203,11 @@ function index()
 	page.acl_depends = { "luci-app-firewall" }
 end
 
-</pre>
+</code></pre>
 
 (3).新建/usr/lib/lua/luci/model/cbi/advancedconfig.lua，内容为：
 
-<pre lang="bash" line="0"  colla="+">
+<pre><code class="language-bash">
 --/usr/lib/lua/luci/model/cbi/advancedconfig.lua
 local fs = require "nixio.fs"
 
@@ -295,7 +295,7 @@ end
 return m
 
 
-</pre>
+</code></pre>
 
 
 重头戏来了~~~~
@@ -303,7 +303,7 @@ return m
 5.在openwrt上修改/etc/init.d/v2ray，（注意要提前安装好：chinadns,v2ray,dnsmasq-full,coreutils-nohup），内容为：
 
 
-<pre lang="bash" line="0"  colla="+">
+<pre><code class="language-bash">
 #!/bin/sh /etc/rc.common
 #
 # This is free software, licensed under the GNU General Public License v3.
@@ -526,13 +526,13 @@ service_triggers() {
 	procd_add_reload_trigger "advancedconfig"
 }
 
-</pre>
+</code></pre>
 
 
 两种模式都可以使用同一个v2ray的openwrt客户端配置，其中境外全局模式的防火墙配置非常简洁，看起来很舒服。。。
 
 6.最后设置一个多进程的chinadns启动脚本，start_multi_chinadns.sh，内容为：
-<pre lang="bash" line="0"  colla="+">
+<pre><code class="language-bash">
 #!/bin/sh
 # To use this file, install chinadns,v2ray,dnsmasq-full,coreutils-nohup first
 domestic_dns_1="114.114.114.114"
@@ -555,7 +555,7 @@ nohup /usr/bin/chinadns -m -b 0.0.0.0 -p ${chinadns_port_3} -s ${domestic_dns_3}
 sleep 1
 nohup /usr/bin/chinadns -m -b 0.0.0.0 -p ${chinadns_port_4} -s ${domestic_dns_4},${localip}:${v2_dns_port_4} -c /etc/chinadns_chnroute.txt 1>/dev/null 2>&1 &
 
-</pre>
+</code></pre>
 设置在rc.local中作为启动项，即可在openwrt启动的时候带起4个进程的chinadns。
 
 附：luci的效果图如下：
