fix obsolete code style

--- a/_posts/2015-02-10-win7-l2tpe7ad89vpne58aa8e68081e8b7afe794b1e98089e68ba9perle8849ae69cac.md
+++ b/_posts/2015-02-10-win7-l2tpe7ad89vpne58aa8e68081e8b7afe794b1e98089e68ba9perle8849ae69cac.md
@@ -20,7 +20,7 @@ tags:
 如果要删除路由，只需在同文件夹下建一个deleteip.txt的空文件即可  
 <!--more-->
 
-<pre escaped="true" lang="perl" line="0">#!/usr/bin/perl -w
+<pre><code class="language-perl">#!/usr/bin/perl -w
 
 use strict;
 
@@ -99,4 +99,4 @@ foreach my $cc (@line)
     #system("route add $line mask------------- 255.255.255.0 $ip metric 25");
 }
 print $i;
-</pre>
+</code></pre>
