--- a/_posts/2015-03-15-tp-link-wr720n-e7a1ace694b9e58d87e7baa716m-flashe694bbe795a5.md
+++ b/_posts/2015-03-15-tp-link-wr720n-e7a1ace694b9e58d87e7baa716m-flashe694bbe795a5.md
@@ -44,8 +44,8 @@ tags:
 a.备份原路由器art文件，这里面是无线的调试信息，每个路由器理论上都不一样的，必须自己弄。  
 进入原路由器ssh界面下，输入：
 
-<pre class="lang:sh decode:true " >cd /tmp
-dd if=/dev/mtd4 of=art.bin</pre>
+<pre><code class="language-sh">cd /tmp
+dd if=/dev/mtd4 of=art.bin</code></pre>
 
 然后winscp登陆路由器，把art.bin拷贝下来，然后看看是不是正好64k，一个字节都不可以差的，最好备份到安全的地方。
 
@@ -55,7 +55,7 @@ c.制作填充文件，如果使用的是非16M的固件，就要填充
 先计算填充值，16M-128K-固件大小-64k  
 然后写一个perl脚本，生成二进制文件：
 
-<pre class="lang:perl decode:true " >#!/usr/bin/perl
+<pre><code class="language-perl">#!/usr/bin/perl
 use strict;
 my $i = 12648448;#需填充的字节
 open(FH,'&gt;','12M_FF.bin');
@@ -67,16 +67,16 @@ while($i&gt;0)
   $i--;
 }
 
-close FH;</pre>
+close FH;</code></pre>
 
 d.下载大神的uboot，我是从恩山论坛上下的u-boot-ar9331-wr720nv3_wr710n.bin ，其他的uboot也用过，但是最后只能认出12M左右的rom，这个大神的uboot可以认出14M。。。
 
 e.生成16M 编程器固件  
 把uboot文件、art文件、固件、填充文件上传到linux主机(强烈建议打包以后上传，保证完整性)，然后运行：
 
-<pre class="lang:sh decode:true " >cat u-boot-ar9331-wr720nv3_wr710n.bin openwrt-ar71xx-generic-tl-wr720n-v3-squashfs-factory.bin 12M_FF.bin art.bin &gt; wr720_1407dashenfullflash.bin
+<pre><code class="language-sh">cat u-boot-ar9331-wr720nv3_wr710n.bin openwrt-ar71xx-generic-tl-wr720n-v3-squashfs-factory.bin 12M_FF.bin art.bin &gt; wr720_1407dashenfullflash.bin
 gzip wr720_1407dashenfullflash.bin
-</pre>
+</code></pre>
 
 然后下载下来就好了,解压后看看大小，一定是16.0 MB (16,777,216 字节)。
 
