--- a/_posts/2015-09-16-e7bc96e8af91openwrte697b6e887aae58aa8e8b7b3e8bf87e99499e8afafefbc8ce4b88de4b8ade696ade79a84e696b9e6b395e38082e38082e38082.md
+++ b/_posts/2015-09-16-e7bc96e8af91openwrte697b6e887aae58aa8e8b7b3e8bf87e99499e8afafefbc8ce4b88de4b8ade696ade79a84e696b9e6b395e38082e38082e38082.md
@@ -13,7 +13,7 @@ tags:
 转载自：  
 https://lists.openwrt.org/pipermail/openwrt-devel/2009-June/004411.html
 
-<pre class="lang:vim decode:true " >//.ichael
+<pre><code class="language-vim">//.ichael
 
 ------------8&lt;---------------
 if [ "$1" != "-f" ] ; then
@@ -27,4 +27,4 @@ for i in $(grep "failed to build" errors.txt | sed 's/^.*ERROR:[[:space:]]*\([^[
                 echo Compiling: ${i}
                 make ${i}-compile V=99 &gt; build_${i##*/}.txt 2&gt;&1 || echo ${i} : Build failed, see build_${i##*/}.txt
         fi
-done</pre>
+done</code></pre>
