--- a/_posts/2016-07-01-openwrt-e5ae9ee78eb0e68c89ipe8bf9be8a18ce6b581e9878fe7bb9fe8aea1e79a84e58a9ee6b395.md
+++ b/_posts/2016-07-01-openwrt-e5ae9ee78eb0e68c89ipe8bf9be8a18ce6b581e9878fe7bb9fe8aea1e79a84e58a9ee6b395.md
@@ -11,17 +11,17 @@ tags:
 ---
 一般的路由都有按IP进行流量统计，但是openwrt似乎没有自带的按ip进行流量统计插件，只有按interface进行统计的插件，不是特别方便。在查阅一些资料后，发现一个软件叫做bandwithd，可以实现这个功能。
 
-<pre class="lang:sh decode:true " >opkg update
-opkg install bandwidthd</pre>
+<pre><code class="language-sh">opkg update
+opkg install bandwidthd</code></pre>
 
 原版的cc 15.05是没有这个包的，官方说需要自己编译。。。但是我从cc 15.05.1下了个也能用。
 
-<pre class="lang:sh decode:true " >/etc/init.d/bandwidthd enable
-/etc/init.d/bandwidthd start</pre>
+<pre><code class="language-sh">/etc/init.d/bandwidthd enable
+/etc/init.d/bandwidthd start</code></pre>
 
 然后通过：
 
-<pre class="lang:sh decode:true " >http://路由ip/bandwidthd</pre>
+<pre><code class="language-sh">http://路由ip/bandwidthd</code></pre>
 
 就可以看到各内网ip的流量，页面自动刷新的。
 
