change code format
repalce all <pre><code class='lanuage-xxx'>...</code><pre> to ```xxx ... ```

--- a/_posts/2015-02-10-win7-l2tpe7ad89vpne58aa8e68081e8b7afe794b1e98089e68ba9perle8849ae69cac.md
+++ b/_posts/2015-02-10-win7-l2tpe7ad89vpne58aa8e68081e8b7afe794b1e98089e68ba9perle8849ae69cac.md
@@ -20,7 +20,8 @@ tags:
 如果要删除路由，只需在同文件夹下建一个deleteip.txt的空文件即可  
 <!--more-->
 
-<pre><code class="language-perl">#!/usr/bin/perl -w
+```perl
+#!/usr/bin/perl -w
 
 use strict;
 
@@ -56,8 +57,8 @@ print IPFILE $page;
 close(IPFILE);
 }else
 {
-open(IPFILE2,"&lt;ip.list") or die "file ip.list cannot be opened";
-while(my $content = &lt;IPFILE2>)
+open(IPFILE2,"<ip.list") or die "file ip.list cannot be opened";
+while(my $content = <IPFILE2>)
 {
 	$page =$page.$content;
 	}
@@ -99,4 +100,5 @@ foreach my $cc (@line)
     #system("route add $line mask------------- 255.255.255.0 $ip metric 25");
 }
 print $i;
-</code></pre>
+
+```
