--- a/_posts/2016-07-27-openwrt-e8b7afe794b1e599a8e9809ae8bf87e585a8e5b180httpe4bba3e79086e4b88ae7bd91e79a84e680aae5bc82e8a7a3e586b3e696b9e6a188.md
+++ b/_posts/2016-07-27-openwrt-e8b7afe794b1e599a8e9809ae8bf87e585a8e5b180httpe4bba3e79086e4b88ae7bd91e79a84e680aae5bc82e8a7a3e586b3e696b9e6a188.md
@@ -30,9 +30,12 @@ tags:
 下面是详细配置：  
 **1.先贴一个对端openvpn服务器（也是基于openwrt路由）的配置：**
 
-<pre><code class="language-sh">vi /etc/config/openvpn</code></pre>
+```sh
+vi /etc/config/openvpn
+```
 
-<pre><code class="language-vim">config openvpn 'tun_test'
+```vim
+config openvpn 'tun_test'
         option port '3366'
         option proto 'tcp'
         option dev 'tun0'
@@ -58,18 +61,22 @@ tags:
         list push 'dhcp-option DNS 172.24.8.1'
         list push 'route 172.24.8.0 255.255.255.0'
         list push 'redirect-gateway def1'
-        option enabled '1'</code></pre>
+        option enabled '1'
+```
 
 对端openvpn服务器上的防火墙和网络配置可以参考本站  
 [《Openwrt路由上的Openvpn Server Tun模式配置和firewall配置》](https://routeragency.com/?p=539)
 
 **2.openwrt的openvpn客户端配置：**
 
-<pre><code class="language-sh">vi /etc/config/openvpn</code></pre>
+```sh
+vi /etc/config/openvpn
+```
 
 注意在里面使用了代理服务器：10.0.2.2:8000 并通过/etc/config/pw.txt 文本文件实现了认证，文本第一行是用户名，第二行是密码。
 
-<pre><code class="language-vim">##############################################
+```vim
+##############################################
 # Sample client-side OpenVPN 2.0 uci config  #
 # for connecting to multi-client server.     #
 ##############################################
@@ -182,15 +189,19 @@ config openvpn sample_client
 
         # Silence repeating messages
 #       option mute 20
-</code></pre>
+
+```
 
 防火墙配置，涉及vpn的部分：
 
-<pre><code class="language-sh">vi /etc/config/firewall</code></pre>
+```sh
+vi /etc/config/firewall
+```
 
 增加：
 
-<pre><code class="language-vim">config zone
+```vim
+config zone
         option name 'vpnzone'
         option masq '1'
         option networt 'vpn'
@@ -206,19 +217,26 @@ config forwarding
 
 config forwarding
         option src 'vpnzone'
-        option dest 'lan'</code></pre>
+        option dest 'lan'
+```
 
 网络接口配置：
 
-<pre><code class="language-sh">vi /etc/config/network</code></pre>
+```sh
+vi /etc/config/network
+```
 
 增加：
 
-<pre><code class="language-vim">config interface 'vpn'
+```vim
+config interface 'vpn'
         option proto 'none'
-        option ifname 'tun0'</code></pre>
+        option ifname 'tun0'
+```
 
 原本以为代理服务器10.0.x.x网段与10.8.x.x/128.0.0.0网段会有路由冲突，后来发现居然没有问题。。。  
 用以下命令可以看看是否服务器端路由push到客户端了：
 
-<pre><code class="language-sh">netstat -nr</code></pre>
+```sh
+netstat -nr
+```
