--- a/_posts/2019-08-24-perle4bdbfe794a8mimee58f91e98081e5b8a6e99984e4bbb6e79a84e982aee4bbb6.md
+++ b/_posts/2019-08-24-perle4bdbfe794a8mimee58f91e98081e5b8a6e99984e4bbb6e79a84e982aee4bbb6.md
@@ -11,7 +11,8 @@ tags:
 ---
 好久不用perl脚本写东西了，今天突发奇想，需要自动发送带附件的邮件，网上找了很多资料，修改了一下，就是这样了，先用ppm安装MIME::Lite和Authen::SASL包
 
-<pre><code class="language-bash">
+```bash
+
 #!/usr/bin/perl -w
 use strict;
 use warnings;
@@ -53,4 +54,5 @@ use Authen::SASL;
       AuthPass=>$passwd,
   );
   $msg->send;
-  </code></pre>
+  
+```
