--- a/_posts/2015-07-25-e887aae7bc96e8af91openwrt-x86e694afe68c81e5a49ae6a0b8e38081e5a4a7e58685e5ad98e38081e8bf85e99bb7e8bf9ce7a88be5928ce8bf87e6bba4e5b9bfe5918a.md
+++ b/_posts/2015-07-25-e887aae7bc96e8af91openwrt-x86e694afe68c81e5a49ae6a0b8e38081e5a4a7e58685e5ad98e38081e8bf85e99bb7e8bf9ce7a88be5928ce8bf87e6bba4e5b9bfe5918a.md
@@ -17,27 +17,32 @@ trunk版是大坑，自从r45995改成了musl libc以后，对uclibc非常不友
 1.编译OP X86 32位版本：  
 <!--more-->
 
-<pre><code class="language-sh">svn co svn://svn.openwrt.org/openwrt/branches/barrier_breaker
+```sh
+svn co svn://svn.openwrt.org/openwrt/branches/barrier_breaker
 ./scripts/feeds update -a
 ./scripts/feeds install -a
 make menuconfig
-make kernel_menuconfig</code></pre>
+make kernel_menuconfig
+```
 
 注意：  
 a)debootstrap版本已经改变1.60已经无法找到了，编译时会报错，需要修改对应的makefile里面的版本和对应的md5值，我使用的是：debootstrap-udeb\_1.0.64~bpo70+1\_all.udeb  
 b)另外还要修改config/config-image.in里面的inode数，因为我用的256G SSD，怕不给力：
 
-<pre><code class="language-vim">config TARGET_ROOTFS_MAXINODE
+```vim
+config TARGET_ROOTFS_MAXINODE
 ……
 	 default 6000
 ……
-	 Allows you to change the maximum number of inodes in the root filesystem</code></pre>
+	 Allows you to change the maximum number of inodes in the root filesystem
+```
 
 把6000改个6000000就差不多了。。。  
 要选的东西很多，大家可以参考：  
 menuconfig里面的东东为（处理过的.config文件，比较直观安装了哪些package）：
 
-<pre><code class="language-vim">#
+```vim
+#
 # Automatically generated file; DO NOT EDIT.
 # OpenWrt Configuration
 #
@@ -1521,7 +1526,8 @@ CONFIG_PACKAGE_usb-modeswitch=y
 #
 # libraries
 #
-</code></pre>
+
+```
 
 另外barrier\_breaker/target/linux/x86/config-3.10里面有kernel\_menuconfig的配置,由于不是很直观，还是贴图方便：
 
@@ -1546,22 +1552,29 @@ luci-app-shadowsocks-spec\_1.3.3-1\_all.ipk
 启动op以后，通过block-mount或者luci的挂载点将/dev/sda3自动挂载上去。  
 并在计划任务里面加上：
 
-<pre><code class="language-sh">ntfs-3g /dev/sdb2 /mnt/nasdisk0/</code></pre>
+```sh
+ntfs-3g /dev/sdb2 /mnt/nasdisk0/
+```
 
 4.安装迅雷  
 防火墙打开9000端口
 
-<pre><code class="language-sh">mkdir xunlei
-chmod 0755 -R xunlei/</code></pre>
+```sh
+mkdir xunlei
+chmod 0755 -R xunlei/
+```
 
 把Xware1.0.31\_x86\_32_uclibc.zip解压到xunlei文件夹，然后：
 
-<pre><code class="language-sh">chmod +x portal
-./portal</code></pre>
+```sh
+chmod +x portal
+./portal
+```
 
 第一次运行会出现：
 
-<pre><code class="language-sh">initing...
+```sh
+initing...
 try stopping xunlei service first...
 killall: ETMDaemon: no process killed
 killall: EmbedThunderManager: no process killed
@@ -1586,45 +1599,59 @@ Connecting to 127.0.0.1:9000 (127.0.0.1:9000)
 THE ACTIVE CODE IS: xxxx
 
 go to http://yuancheng.xunlei.com, bind your device with the active code.
-finished.</code></pre>
+finished.
+```
 
 5.安装debian
 
-<pre><code class="language-sh">opkg install debootstrap binutils objdump
-debootstrap  --arch=i386  wheezy    /mnt/sda3 http://ftp.jp.debian.org/debian/</code></pre>
+```sh
+opkg install debootstrap binutils objdump
+debootstrap  --arch=i386  wheezy    /mnt/sda3 http://ftp.jp.debian.org/debian/
+```
 
 安装成功后会有提示，这时候
 
-<pre><code class="language-sh">cd /mnt/sda3
-ls</code></pre>
+```sh
+cd /mnt/sda3
+ls
+```
 
 会看到debian系统基本文件结构。
 
 6.安装adbyby
 
-<pre><code class="language-sh">cd /mnt/sda3/root
+```sh
+cd /mnt/sda3/root
 mkdir ad
 cd ad
 wget http://update.adbyby.com/download/linux.86.tar.gz
 tar xzvf linux.86.tar.gz
-chmod +x adbyby</code></pre>
+chmod +x adbyby
+```
 
 7.使用脚本启动adbyby  
 如果直接
 
-<pre><code class="language-sh">chroot /mnt/sda3 /bin/bash</code></pre>
+```sh
+chroot /mnt/sda3 /bin/bash
+```
 
 然后运行adbyby会报一个：
 
-<pre><code class="language-vim">the path is too long</code></pre>
+```vim
+the path is too long
+```
 
 的错误，原因未知，所以要用一个脚本来跑，而且该脚本会定时查看adbyby的情况：
 
-<pre><code class="language-sh">cd /mnt/sda3/root
+```sh
+cd /mnt/sda3/root
 
-vi ad.sh</code></pre>
+vi ad.sh
+```
 
-<pre><code class="language-vim">#!/bin/sh
+```vim
+#!/bin/sh
 mount -t proc proc /proc
 mon() {
 while [ "1" ];
@@ -1632,32 +1659,41 @@ do
  cc=`ps | grep adbyby | grep -v grep | grep -v catch`
  if [ -z "$cc" ];then
  
-/root/ad/adbyby& &gt;/dev/null
+/root/ad/adbyby& >/dev/null
 fi
  sleep 4
 done
 }
  
-mon &</code></pre>
+mon &
+```
 
 注意：mount -t proc proc /proc 必须加上，否则debian下无法共享openwrt的进程显示
 
-<pre><code class="language-sh">chmod +x ad.sh</code></pre>
+```sh
+chmod +x ad.sh
+```
 
 然后：
 
-<pre><code class="language-sh">cd /root
+```sh
+cd /root
 vi startAdbyby.sh
- </code></pre>
+ 
+```
 
-<pre><code class="language-vim">#!/bin/sh
+```vim
+#!/bin/sh
 iptables -t nat -A PREROUTING -p tcp -s 192.168.1.128/25 --dport 80 -j REDIRECT --to-ports 8118
 chroot /mnt/sda3 /bin/bash -c "/root/ad.sh"
 
-exit</code></pre>
+exit
+```
 
-<pre><code class="language-sh">chmod +x startAdbyby.sh
-</code></pre>
+```sh
+chmod +x startAdbyby.sh
+
+```
 
 然后把这个加到crontab启动任务里面
 
