--- a/_posts/2025-08-26-E59CA8E696B0E78988luciE9A1B5E99DA2E4B8ADE5889BE5BBBAE88F9CE58D95E794A8E4BA8EE58887E68DA2v2rayE8BF90E8A18CE6A8A1E5BC8F.md
+++ b/_posts/2025-08-26-E59CA8E696B0E78988luciE9A1B5E99DA2E4B8ADE5889BE5BBBAE88F9CE58D95E794A8E4BA8EE58887E68DA2v2rayE8BF90E8A18CE6A8A1E5BC8F.md
@@ -139,6 +139,10 @@ return view.extend({
 }
 ```
 
+最终菜单界面如下：
+
+<img src="https://jibenfa.github.io/uploads/2025/08/v2menu.png" width="1454" height="415" alt="AltText" />
+
 参考：
 1）chatgpt
 2）luci-app-samba4的配置文件
