add pics and modify blog

--- a/_posts/2025-09-02-E69E81E7AE80v2rayE6B581E9878FE7BB9FE8AEA1E99DA2E69DBF.md
+++ b/_posts/2025-09-02-E69E81E7AE80v2rayE6B581E9878FE7BB9FE8AEA1E99DA2E69DBF.md
@@ -16,7 +16,9 @@ v2ray自带流量统计功能，执行如下语句就能获得实时累计流量
 ```bash
 /usr/bin/v2ray/v2ray api stats --server=127.0.0.1:10085
 ```
-但是重启服务以后，流量就清零了，为了持久化，我做了一个极简的按月统计流量的web面板，并通过口令控制访问权限。只需要安装python3和任一一个web服务端即可，我这里用的是nginx。
+但是重启服务以后，流量就清零了，为了持久化，我做了一个极简的统计v2ray流量的web面板，支持按用户统计，每月初清零，并通过口令控制访问权限。
+
+纯静态页面！只需要安装python3和任一一个web服务端即可，我这里用的是nginx。
 
 步骤如下：
 
@@ -147,7 +149,6 @@ v2ray自带流量统计功能，执行如下语句就能获得实时累计流量
 ```
 
 2. 在nginx页面根目录下创建index.html，我这里是ubuntu，路径是：/usr/share/nginx/html/ ，内容如下：
-
 ```html
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -483,6 +484,14 @@ sudo apt-get install python3 python3-pycryptodome
 ```vim
 * * * * * python3 /root/v2ray-stats.py
 ```
-最后打开网页基本上就是这样了：
+最后打开网页就是这样了：
+
+登陆前：
+
+<img src="https://jibenfa.github.io/uploads/2025/09/web1.png" width="1369" height="776" alt="登录页面" />
+
+登录后：
+
+<img src="https://jibenfa.github.io/uploads/2025/09/web2.png" width="1368" height="933" alt="统计页面" />
 
 
