change function names

--- a/_posts/2025-08-25-v2rayE4BDBFE794A8tproxyE4BBA3E79086udpE6B581E9878F.md
+++ b/_posts/2025-08-25-v2rayE4BDBFE794A8tproxyE4BBA3E79086udpE6B581E9878F.md
@@ -365,7 +365,7 @@ stop_service()  {
     disable_nft_rules
 }
 
-enable_v2ray_rules(){
+enable_nft_rules(){
     running_v2ray_mode=$(cat /tmp/v2raymode.txt 2>/dev/null | tr -d '\r')
     v2ray_mode=`uci get advancedconfig.@rules[0].v2raymode 2>/dev/null`
 
@@ -394,7 +394,7 @@ enable_v2ray_rules(){
 }
 
 start_service()  {
-    enable_v2ray_rules
+    enable_nft_rules
     echo "[+] 启动 chinadns-ng 服务"
     procd_open_instance
     procd_set_param command $CHINADNSNG_BIN -C $CHINADNSNG_CONF
