--- a/_posts/2025-08-25-v2rayE4BDBFE794A8tproxyE4BBA3E79086udpE6B581E9878F.md
+++ b/_posts/2025-08-25-v2rayE4BDBFE794A8tproxyE4BBA3E79086udpE6B581E9878F.md
@@ -165,8 +165,8 @@ USE_PROCD=1
 LAN_IPS="10.0.0.1/16" #局域网ip段
 V2RAY_BIN="/usr/bin/v2ray"
 V2RAY_CONF="/etc/config/v2ray.json"
-CHINADNSNG_BIN=/usr/bin/chinadns-ng
-CHINADNSNG_CONF=/etc/config/chinadns-ng
+CHINADNSNG_BIN="/usr/bin/chinadns-ng"
+CHINADNSNG_CONF="/etc/config/chinadns-ng"
 
 DEFAULT_DNS_SERVER="223.6.6.6" 
 LOCAL_IP="127.0.0.1"
