--- a/_posts/2025-08-25-v2rayE4BDBFE794A8tproxyE4BBA3E79086udpE6B581E9878F.md
+++ b/_posts/2025-08-25-v2rayE4BDBFE794A8tproxyE4BBA3E79086udpE6B581E9878F.md
@@ -165,16 +165,17 @@ USE_PROCD=1
 LAN_IPS="10.0.0.1/16" #局域网ip段
 V2RAY_BIN="/usr/bin/v2ray"
 V2RAY_CONF="/etc/config/v2ray.json"
+V2RAY_PORT="1060"
+V2RAY_DNS_PORTS="5354 5356 5358 5360" #5356走tcp
+
+CHINADNSNG_PORT="5353"
+CHINADNSNG_FILES_PATH="/etc/chinadns-ng/" #结尾必须带斜杠
 CHINADNSNG_BIN="/usr/bin/chinadns-ng"
 CHINADNSNG_CONF="/etc/config/chinadns-ng"
 
 DEFAULT_DNS_SERVER="223.6.6.6" 
 LOCAL_IP="127.0.0.1"
-V2RAY_PORT="1060"
-V2RAY_DNS_PORTS="5354 5356 5358 5360" #5356走tcp
 
-CHINADNSNG_PORT="5353"
-CHINADNSNG_FILES_PATH="/etc/chinadns-ng/"
 # 本配置文件中NFT默认参数为：
 # family:inet
 # table:global
