--- a/_posts/2025-08-25-v2rayE4BDBFE794A8tproxyE4BBA3E79086udpE6B581E9878F.md
+++ b/_posts/2025-08-25-v2rayE4BDBFE794A8tproxyE4BBA3E79086udpE6B581E9878F.md
@@ -155,7 +155,7 @@ openwrt下的v2ray透明代理有redirect和tproxy两种模式，前者只能代
 # This is free software, licensed under the GNU General Public License v3.
 # See /LICENSE for more information.
 #
-# To use this file, install chinadns-ng,v2ray,knot-dig first
+# To use this file, install chinadns-ng,v2ray,knot-dig(only for test) first
 #
 #
 
