modify script names

--- a/_posts/2025-08-26-E59CA8E696B0E78988luciE9A1B5E99DA2E4B8ADE5889BE5BBBAE88F9CE58D95E794A8E4BA8EE58887E68DA2v2rayE8BF90E8A18CE6A8A1E5BC8F.md
+++ b/_posts/2025-08-26-E59CA8E696B0E78988luciE9A1B5E99DA2E4B8ADE5889BE5BBBAE88F9CE58D95E794A8E4BA8EE58887E68DA2v2rayE8BF90E8A18CE6A8A1E5BC8F.md
@@ -105,7 +105,7 @@ return view.extend({
 
         // 保存时执行 uci commit + restart
         m.oncommit = function() {
-            return callExec('/etc/init.d/v2ray', ['restart', 'force']);
+            return callExec('/etc/init.d/v2ray_chinadnsng', ['restart', 'force']);
         };
 
         return m.render();
